# eth-lst-tracker

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  config.json  docker-compose.yml  lsd.json  lsdtracker.py  requirements.txt
.github/workflows/: api_build.yml  docker_build_push.yml  price-fetcher_build.yml  ruff.yml
api/: Dockerfile  pyproject.toml  requirements.txt  test_main.http
api/src/: alerting.py  app.py  auth.py  crud.py  database.py  main.py  models.py  rate_limiting.py  schemas.py  security.py
api/src/data_access/: __init__.py  alerts.py  prices.py
api/src/models/: __init__.py  alert.py  auth.py  prices.py  token_listing.py
api/src/routers/: alerts.py  auth.py  prices.py
api/src/schemas/: alert.py  auth.py  price.py
api/src/services/: __init__.py  alerting.py  auth.py
api/src/utils/: email.py
database/: init.sql  prices.sql
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.config.ts  app.vue
frontend/app/assets/css/: main.css
frontend/app/components/: AlertsList.vue  AlertsToolbar.vue  CreateAlertModal.vue  DeleteAlertModal.vue  LoginModal.vue  Logo.vue  TokenPremiumHistoryChart.vue
frontend/app/composables/: useAuth.ts  usePrices.ts
frontend/app/pages/: alerts.vue  index.vue
frontend/app/utils/: alerts.ts  string.ts  tokens.ts
frontend/shared/types/: alerts.d.ts  tokens.d.ts
price-fetcher/: .env.template  Dockerfile  README.md  config.json  pyproject.toml  requirements.txt
price-fetcher/src/: lsdtracker.py  main.py  utils.py
price-fetcher/src/adapters/: OneInchPriceFetcher.py  ParaswapPriceFetcher.py
price-fetcher/src/data_storage/: DataSaver.py  FakeDataSaver.py  PostgresDataSaver.py
price-fetcher/src/price_fetcher/: OneInchPriceFetcher.py  ParaswapPriceFetcher.py  SecondaryMarketPriceFetcher.py
src/: lsdtracker.py  utils.py
src/adapters/: OneInchPriceFetcher.py  ParaswapPriceFetcher.py
src/ports/: SecondaryMarketPriceFetcher.py
(+1 files in other folders)
