[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.121.2",
    "psycopg2-binary==2.9.11",
    "sqlalchemy==2.0.44",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, and import sorting
ignore = []

[tool.ruff.format]
docstring-code-format = true
